--- a/src/controls.html
+++ b/src/controls.html
@@ -1184,6 +1184,155 @@ Value</textarea
                                 </button>
                             </div>
                         </div>
+                        <!-- Alerts -->
+                        <div class="form__elements-wrapper">
+                            <div class="form__alerts">
+                                <!-- Alert bright -->
+                                <div
+                                    class="form__alert-item alert alert--bright"
+                                >
+                                    <span class="alert__text"
+                                        >A bright alert flash for dark
+                                        backgrounds, which never lose the
+                                        contrast.</span
+                                    >
+                                    <button class="alert__button">
+                                        <svg
+                                            class="alert__icon"
+                                            viewbox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M5 5L19 19M5 19L19 5"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </button>
+                                </div>
+                                <!-- Alert -->
+                                <div class="form__alert-item alert">
+                                    <span class="alert__text"
+                                        >A dark alert flash for bright
+                                        backgrounds, which never lose the
+                                        contrast.</span
+                                    >
+                                    <button class="alert__button">
+                                        <svg
+                                            class="alert__icon"
+                                            viewbox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M5 5L19 19M5 19L19 5"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </button>
+                                </div>
+                                <!-- Alert accent -->
+                                <div
+                                    class="form__alert-item alert alert--accent"
+                                >
+                                    <span class="alert__text"
+                                        >A primary alert flash that looks pretty
+                                        nice.</span
+                                    >
+                                    <button class="alert__button">
+                                        <svg
+                                            class="alert__icon"
+                                            viewbox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M5 5L19 19M5 19L19 5"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </button>
+                                </div>
+                                <!-- Alert warning -->
+                                <div
+                                    class="
+                                        form__alert-item
+                                        alert alert--warning
+                                    "
+                                >
+                                    <span class="alert__text"
+                                        >A warning alert flash that never
+                                        sucks.</span
+                                    >
+                                    <button class="alert__button">
+                                        <svg
+                                            class="alert__icon"
+                                            viewbox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M5 5L19 19M5 19L19 5"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </button>
+                                </div>
+                                <!-- Alert success -->
+                                <div
+                                    class="
+                                        form__alert-item
+                                        alert alert--success
+                                    "
+                                >
+                                    <span class="alert__text"
+                                        >A success alert flash, which never lose
+                                        the contrast.</span
+                                    >
+                                    <button class="alert__button">
+                                        <svg
+                                            class="alert__icon"
+                                            viewbox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M5 5L19 19M5 19L19 5"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </button>
+                                </div>
+                                <!-- Alert error -->
+                                <div
+                                    class="form__alert-item alert alert--error"
+                                >
+                                    <span class="alert__text"
+                                        >An error alert flash that nobody
+                                        loves.</span
+                                    >
+                                    <button class="alert__button">
+                                        <svg
+                                            class="alert__icon"
+                                            viewbox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M5 5L19 19M5 19L19 5"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
