--- a/src/controls.html
+++ b/src/controls.html
@@ -1333,6 +1333,31 @@ Value</textarea
                                 </div>
                             </div>
                         </div>
+                        <!-- Progresses -->
+                        <div class="form__elements-wrapper">
+                            <div class="form__progresses">
+                                <!-- Progress -->
+                                <div
+                                    class="form__progress-item"
+                                    id="form-progress-01"
+                                ></div>
+                                <!-- Progress warning -->
+                                <div
+                                    class="form__progress-item"
+                                    id="form-progress-02"
+                                ></div>
+                                <!-- Progress -->
+                                <div
+                                    class="form__progress-item"
+                                    id="form-progress-03"
+                                ></div>
+                                <!-- Progress -->
+                                <div
+                                    class="form__progress-item"
+                                    id="form-progress-04"
+                                ></div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
