progress constructor description

--- a/src/controls.html
+++ b/src/controls.html
@@ -1346,12 +1346,12 @@ Value</textarea
                                     class="form__progress-item"
                                     id="form-progress-02"
                                 ></div>
-                                <!-- Progress -->
+                                <!-- Progress success -->
                                 <div
                                     class="form__progress-item"
                                     id="form-progress-03"
                                 ></div>
-                                <!-- Progress -->
+                                <!-- Progress error -->
                                 <div
                                     class="form__progress-item"
                                     id="form-progress-04"
