--- a/src/elements.html
+++ b/src/elements.html
@@ -51,7 +51,7 @@
                         <div class="logos__item logo logo--full">
                             <img
                                 src="/images/logo-full-dark.png"
-                                alt="Logo dark"
+                                alt="Logo dark full"
                                 class="logo__image"
                             />
                         </div>
@@ -59,7 +59,7 @@
                         <div class="logos__item logo">
                             <img
                                 src="/images/logo-bright.png"
-                                alt="Logo dark"
+                                alt="Logo bright"
                                 class="logo__image"
                             />
                         </div>
@@ -67,9 +67,103 @@
                         <div class="logos__item logo logo--full">
                             <img
                                 src="/images/logo-full-bright.png"
-                                alt="Logo dark"
+                                alt="Logo bright full"
                                 class="logo__image"
                             />
+                        </div>
+                    </div>
+                </section>
+                <!-- Avatars -->
+                <section class="avatars">
+                    <h2 class="section-heading">
+                        <span class="section-heading__number">06.</span>
+                        Avatars
+                    </h2>
+                    <div class="avatars__wrapper section-wrapper">
+                        <!-- Avatar round 1 -->
+                        <div class="avatars__item avatar">
+                            <img
+                                src="/images/avatar-01.png"
+                                alt="Round avatar example"
+                                class="avatar__image"
+                            />
+                            <span class="avatar__initials"></span>
+                        </div>
+                        <!-- Avatar round 2 -->
+                        <div class="avatars__item avatar">
+                            <img
+                                src="/images/avatar-02.png"
+                                alt="Round avatar example"
+                                class="avatar__image"
+                            />
+                            <span class="avatar__initials"></span>
+                        </div>
+                        <!-- Avatar round 3 -->
+                        <div class="avatars__item avatar">
+                            <img
+                                src="/images/avatar-03.png"
+                                alt="Round avatar example"
+                                class="avatar__image"
+                            />
+                            <span class="avatar__initials"></span>
+                        </div>
+                        <!-- Avatar round 4 -->
+                        <div class="avatars__item avatar">
+                            <img
+                                src="/images/avatar-04.png"
+                                alt="Round avatar example"
+                                class="avatar__image"
+                            />
+                            <span class="avatar__initials"></span>
+                        </div>
+                        <!-- Avatar thumb 1 -->
+                        <div class="avatars__item avatar avatar--thumb">
+                            <img
+                                src="/images/avatar-01.png"
+                                alt="Round avatar example"
+                                class="avatar__image"
+                            />
+                            <span class="avatar__initials"></span>
+                        </div>
+                        <!-- Avatar thumb 2 -->
+                        <div class="avatars__item avatar avatar--thumb">
+                            <img
+                                src="/images/avatar-02.png"
+                                alt="Round avatar example"
+                                class="avatar__image"
+                            />
+                            <span class="avatar__initials"></span>
+                        </div>
+                        <!-- Avatar thumb 3 -->
+                        <div class="avatars__item avatar avatar--thumb">
+                            <img
+                                src="/images/avatar-03.png"
+                                alt="Round avatar example"
+                                class="avatar__image"
+                            />
+                            <span class="avatar__initials"></span>
+                        </div>
+                        <!-- Avatar thumb 4 -->
+                        <div class="avatars__item avatar avatar--thumb">
+                            <img
+                                src="/images/avatar-04.png"
+                                alt="Round avatar example"
+                                class="avatar__image"
+                            />
+                            <span class="avatar__initials"></span>
+                        </div>
+                        <!-- Avatar round initials -->
+                        <div class="avatars__item avatar avatar--initials">
+                            <span class="avatar__initials">nk</span>
+                        </div>
+                        <!-- Avatar thumb initials -->
+                        <div
+                            class="
+                                avatars__item
+                                avatar avatar--thumb avatar--initials
+                            "
+                        >
+                            <span class="avatar__initials">ps</span>
                         </div>
                     </div>
                 </section>
