--- a/src/elements.html
+++ b/src/elements.html
@@ -167,6 +167,122 @@
                         </div>
                     </div>
                 </section>
+                <!-- Messages (basic - dark bottom left) -->
+                <section class="messages">
+                    <h2 class="section-heading">
+                        <span class="section-heading__number">07.</span>
+                        Messages
+                    </h2>
+                    <div class="messages__wrapper section-wrapper">
+                        <!-- Message bright bottom left -->
+                        <div class="messages__item message message--bright">
+                            Chat Message
+                        </div>
+                        <!-- Message dark bottom left -->
+                        <div class="messages__item message">Chat Message</div>
+                        <!-- Message blueberry bottom left -->
+                        <div class="messages__item message message--blueberry">
+                            Chat Message
+                        </div>
+                        <!-- Message strawberry bottom left -->
+                        <div class="messages__item message message--strawberry">
+                            Chat Message
+                        </div>
+                        <!-- Message bright bottom right -->
+                        <div
+                            class="
+                                messages__item
+                                message message--bright message--br
+                            "
+                        >
+                            Chat Message
+                        </div>
+                        <!-- Message dark bottom right -->
+                        <div class="messages__item message message--br">
+                            Chat Message
+                        </div>
+                        <!-- Message blueberry bottom right -->
+                        <div
+                            class="
+                                messages__item
+                                message message--blueberry message--br
+                            "
+                        >
+                            Chat Message
+                        </div>
+                        <!-- Message strawberry bottom right -->
+                        <div
+                            class="
+                                messages__item
+                                message message--strawberry message--br
+                            "
+                        >
+                            Chat Message
+                        </div>
+                        <!-- Message bright top left -->
+                        <div
+                            class="
+                                messages__item
+                                message message--bright message--tl
+                            "
+                        >
+                            Chat Message
+                        </div>
+                        <!-- Message dark top left -->
+                        <div class="messages__item message message--tl">
+                            Chat Message
+                        </div>
+                        <!-- Message blueberry top left -->
+                        <div
+                            class="
+                                messages__item
+                                message message--blueberry message--tl
+                            "
+                        >
+                            Chat Message
+                        </div>
+                        <!-- Message strawberry top left -->
+                        <div
+                            class="
+                                messages__item
+                                message message--strawberry message--tl
+                            "
+                        >
+                            Chat Message
+                        </div>
+                        <!-- Message bright top right -->
+                        <div
+                            class="
+                                messages__item
+                                message message--bright message--tr
+                            "
+                        >
+                            Chat Message
+                        </div>
+                        <!-- Message dark top right -->
+                        <div class="messages__item message message--tr">
+                            Chat Message
+                        </div>
+                        <!-- Message blueberry top right -->
+                        <div
+                            class="
+                                messages__item
+                                message message--blueberry message--tr
+                            "
+                        >
+                            Chat Message
+                        </div>
+                        <!-- Message strawberry top right -->
+                        <div
+                            class="
+                                messages__item
+                                message message--strawberry message--tr
+                            "
+                        >
+                            Chat Message
+                        </div>
+                    </div>
+                </section>
             </div>
         </main>
     </body>
