commentaries for components markup

--- a/src/elements.html
+++ b/src/elements.html
@@ -39,7 +39,7 @@
                         Logos
                     </h2>
                     <div class="logos__wrapper section-wrapper">
-                        <!-- Logo dark -->
+                        <!-- Logo dark (basic) -->
                         <div class="logos__item logo">
                             <img
                                 src="/images/logo-dark.png"
@@ -55,7 +55,7 @@
                                 class="logo__image"
                             />
                         </div>
-                        <!-- Logo bright -->
+                        <!-- Logo bright (basic) -->
                         <div class="logos__item logo">
                             <img
                                 src="/images/logo-bright.png"
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                 </section>
-                <!-- Avatars -->
+                <!-- Avatars (basic - round) -->
                 <section class="avatars">
                     <h2 class="section-heading">
                         <span class="section-heading__number">06.</span>
@@ -285,5 +285,14 @@
                 </section>
             </div>
         </main>
+        <a
+            href="/controls.html"
+            class="page-link page-link--prev"
+            title="To controls page"
+        >
+            <svg class="icons__item icon icon--tint">
+                <use href="/icons/icon-sprite.svg#chevron-left-arrow" />
+            </svg>
+        </a>
     </body>
 </html>
